# review-stadium

./: .gitignore  .npmrc  .stylelintrc.js  Cargo.toml  README.md  amplify.yml  docker-compose.yaml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: feature-request.md
.github/actions/cache_cargo/: action.yml
.github/actions/cache_pnpm/: action.yml
.github/workflows/: front-web-ci.yml  service-user-ci.yml  user_ci.yml  web_ci.yml
common/nodejs/eslint-config/: index.js  package.json
common/nodejs/jest-config/: package.json
common/nodejs/prettier-config/: index.js  package.json
common/nodejs/stylelint-config/: index.js  package.json
common/nodejs/tsconfig/: package.json
common/rust/: Cargo.toml
common/rust/src/: error.rs  lib.rs  model.rs  string.rs
front/web/: .dockerignore  .eslintrc.js  .graphqlconfig.yml  .prettierrc.js  .stylelintrc.js  Dockerfile  codegen.ts  globals.d.ts  jest.config.js  jest.config.ts  middleware.ts  package.json  tailwind.config.js  tsconfig.json
front/web/.storybook/: main.js  preview.js
front/web/amplify/: team-provider-info.json
front/web/amplify/.config/: project-config.json
front/web/amplify/backend/: backend-config.json
front/web/amplify/backend/api/web/: cli-inputs.json  parameters.json  schema.graphql
front/web/amplify/backend/auth/revistae1866733/: cli-inputs.json
front/web/amplify/backend/auth/web45397168/: cli-inputs.json
front/web/amplify/backend/auth/web8550ce96/: cli-inputs.json
front/web/amplify/backend/auth/webbbdfe1c1/: cli-inputs.json
front/web/amplify/backend/types/: amplify-dependent-resources-ref.d.ts
front/web/app/: API.ts  Footer.tsx  Header.tsx  Provider.tsx  layout.tsx  loading.tsx  options.ts
front/web/app/_components/header/: AuthArea.tsx  Header.stories.tsx  index.tsx
front/web/app/_graphql/: query.ts  schema.ts
front/web/app/_graphql/query/: query.ts
front/web/app/_graphql/schema/: schema.ts
front/web/app/_options/: next-auth.ts
front/web/app/_styles/: theme.ts
front/web/app/_types/: next-auth.d.ts
front/web/app/_types/graphql/: gql.ts  graphql.ts
front/web/app/api/auth/[...nextauth]/: route.ts
front/web/app/auth/: page.tsx
front/web/app/graphql/: mutations.ts  queries.ts  schema.json  subscriptions.ts
front/web/app/mypage/: page.tsx
front/web/stories/: page.css
infra/: cdktf.json  main.ts  package.json
infra/construction/: cdktf.json  main.ts  package.json
infra/container/: docker-compose.yml
infra/container/db/user/: Dockerfile
services/: docker-compose.yml
services/app/user/: Cargo.toml
services/app/user/src/: adapter.rs  config.rs  domain.rs  lib.rs  main.rs  use_case.rs
services/app/user/src/adapter/: schema.rs  user_controller.rs
services/app/user/src/domain/: user.rs  user_reposirory.rs  user_repository.rs
services/app/user/src/infra/: error.rs  user_repository.rs
services/app/user/src/use_case/: user_dto.rs  user_interactor.rs  user_use_case.rs
services/user/app/: Cargo.toml
services/user/app/src/: adapter.rs  main.rs  use_case.rs
services/user/app/src/adapter/: mutation.rs  query.rs  schema.rs  user_controller.rs
services/user/app/src/domain/: user.rs  user_repository.rs
services/user/app/src/infra/: user_repository.rs
services/user/app/src/use_case/: mutation_use_case.rs  query_use_case.rs  user_interactor.rs  user_use_case.rs
services/user/db/entrypoint/: 001_user.sql  user.sql
