[workspace]
members = [
    "services/*/app",
    "common/rust"
]

[workspace.dependencies]
actix-web = "4.3.1"
anyhow = "1.0.69"
async-graphql = { version = "5.0.6", features = ["dataloader"] }
async-graphql-actix-web = "5.0.6"
async-trait = "0.1.66" 
common = { path = "common/rust" }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-util = "0.3.27"
log = "0.4.17"  
mockall = "0.11.3"
once_cell = "1.17.1"
slab = "0.4.8"
sqlx = { version = "0.6.2", features = [
  "runtime-actix-native-tls",
  "postgres",
  "time",
  "uuid",
] }
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-actix-web = "0.7.5"
tracing-subscriber = "0.3.17"
ulid = "1.0.0"
validator = { version = "0.16.0", features = ["derive"] }