[workspace]
members = [
    "services/*/app",
    "common/rust"
]

[workspace.dependencies]
actix-web = "4.3.1"
anyhow = "1.0.69"
async-graphql = { version = "5.0.6", features = ["dataloader"] }
async-graphql-actix-web = "5.0.6"
async-trait = "0.1.66"
chrono = { version = "0.4.26", features = ["serde"] }
common = { path = "common/rust" }
dotenv = "0.15.0"
env_logger = "0.10.0"
futures-util = "0.3.27"
log = "0.4.17"
mockall = "0.11.3"
once_cell = "1.17.1"
opentelemetry = { version = "0.19.0", features = ["rt-tokio-current-thread"] }
opentelemetry-jaeger = { version = "0.18.0", features = ["rt-tokio-current-thread"] }
serde = "1.0.164"
serde_derive = "1.0.164"
serde_json = "1.0.99"
serde_with = "3.0.0"
slab = "0.4.8"
sqlx = { version = "0.6.2", features = [
  "chrono",
  "runtime-actix-native-tls",
  "postgres",
  "time",
  "uuid",
] }
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["full"] }
tracing = "0.1.37"
tracing-actix-web = "0.7.5"
tracing-bunyan-formatter = "0.3.7"
tracing-log = "0.1.3"
tracing-opentelemetry = "0.19.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
ulid = "1.0.0"
uuid = "1.4.0"
validator = { version = "0.16.0", features = ["derive"] }