[package]
name = "user"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { workspace = true }
anyhow = { workspace = true}
async-graphql = { workspace = true}
async-graphql-actix-web = { workspace = true}
async-trait = { workspace = true}
common = { workspace = true }
dotenv = { workspace = true }
futures-util = { workspace = true }
mockall = { workspace = true }
once_cell = { workspace = true }
slab = { workspace = true }
sqlx = { workspace = true }
ulid = { workspace = true }
validator = { workspace = true }